syntax = "proto3";

package service;

option go_package = "go_micro_gRPC/proto;service";

// Определение gRPC сервиса для сообщений
service MessageService {
  rpc SendMessage(MessageRequest) returns (MessageResponse);
  rpc GetProcessedMessages(EmptyRequest) returns (MessageStats);
}

message MessageRequest {
  string content = 1;
}

message MessageResponse {
  string status = 1;
  int32 id = 2; // Добавлено поле ID для идентификатора сообщения
}

message EmptyRequest {} // Пустой запрос для статистики

message MessageStats {
  int32 processed_count = 1;
}
